--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-contrib-ui-statechart",
-    "version": "0.1.4",
+    "version": "0.2.0-beta.0",
     "description": "A Node-RED dashboard ui node.",
     "main": "statechart.js",
     "node-red": {
